Add page FAQ. Features and info of pages Index, About, Porfolio, Contacts, FAQ

--- a/lang_school/main/templates/main/footer.html
+++ b/lang_school/main/templates/main/footer.html
@@ -51,7 +51,7 @@
         <p>© 2023 Company, Inc. All rights reserved.</p>
         <ul class="list-unstyled d-flex">
             <li class="ms-3">
-                <a class="link-body-emphasis" href="#">
+                <a class="link-body-emphasis" href="">
                     <i class="bi bi-telegram"></i>
                 </a>
             </li>
