--- a/lang_school/main/templates/main/index.html
+++ b/lang_school/main/templates/main/index.html
@@ -6,7 +6,7 @@
 {% block content %}
   <!-- Preview  -->
   <div class='container'>
-      <div class="text-body-emphasis bg-body-secondary">
+      <div class="text-body-emphasis mu-5 bg-body-secondary">
           <div class="row justify-content-center">
               <div class='col-4'>
                   <img src={% static 'main/images/main_photo.png' %} width='300' class="img-fluid" alt='Photo'>
@@ -76,6 +76,47 @@
       </div>
     </div>
   </div>
+
+  <!-- Blog -->
+  {% comment %} <div class="container py-4 text-start">
+    <h2 class="featurette-heading pb-3 fw-normal lh-1 text-center">Блог</h2>
+    <div class="row mb-2">
+      <div class="col-md-6 align-self-righ">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary-emphasis">World</strong>
+            <h3 class="mb-0">Featured post</h3>
+            <div class="mb-1 text-body-secondary">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+              Continue reading
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="http://placehold.it/400x500/2c3e50/3498db&text=Photo" class="bd-placeholder-img" width="200" height="250" alt="Third Slide Image">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success-emphasis">Design</strong>
+            <h3 class="mb-0">Post title</h3>
+            <div class="mb-1 text-body-secondary">Nov 11</div>
+            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+              Continue reading
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="http://placehold.it/400x500/2c3e50/3498db&text=Photo" class="bd-placeholder-img" width="200" height="250" alt="Third Slide Image">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> {% endcomment %}
       
   <!-- Reviews -->
   <div class="container py-4 text-center">
