--- a/lang_school/main/templates/main/navbar.html
+++ b/lang_school/main/templates/main/navbar.html
@@ -20,6 +20,7 @@
             </ul>
           </li>
           <li><a href="about" class="nav-link px-2 text-white">О проекте</a></li>
+          <li><a href="faq" class="nav-link px-2 text-white">FAQ</a></li>
           <li><a href="portfolio" class="nav-link px-2 text-white">О себе</a></li>
           <li><a href="contacts" class="nav-link px-2 text-white">Контакты</a></li>
         </ul>
