--- a/lang_school/main/templates/main/navbar.html
+++ b/lang_school/main/templates/main/navbar.html
@@ -26,7 +26,13 @@
         </ul>
       </div>
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-end">
-        {% if user.is_authed %}
+        {% if user.is_authenticated %}
+
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li>
+            <span class='nav-link d-flex text-white px-2 text-decoration-none'>{{ user.username }}</span>
+          </li>
+        </ul> 
         <div class="flex-shrink-0 dropdown">
           <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
@@ -36,11 +42,13 @@
             <li><a class="dropdown-item" href="#">Settings</a></li>
             <li><a class="dropdown-item" href="#">Profile</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Sign out</a></li>
+            <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
           </ul>
         </div>
         {% else %}
-        <button type="button" class="btn btn-outline-light me-2">Login</button>
+        <a href="{% url 'auth' %}">
+          <button type="button" class="btn btn-outline-light me-2">Login</button>
+        </a>
         <button type="button" class="btn btn-warning">Sign-up</button>
         {% endif %}
         </div>
