--- a/lang_school/main/templates/main/index.html
+++ b/lang_school/main/templates/main/index.html
@@ -8,7 +8,7 @@
   <div class='container'>
       <div class="text-body-emphasis mu-5 bg-body-secondary">
           <div class="row justify-content-center">
-              <div class='col-4'>
+              <div class='col-4 pt-4'>
                   <img src={% static 'main/images/main_photo.png' %} width='300' class="img-fluid" alt='Photo'>
               </div>
               <div class="col-4 align-self-center">
@@ -27,7 +27,7 @@
   <div class="album py-2">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-          <div class="col">
+          <div class="col h-100" style='margin-bottom: auto'>
             <div class="card shadow-sm">
               <img src="{% static 'main/images/eng.png' %}" class="d-block w-100" alt="Third Slide Image">
               <div class="card-body">
@@ -43,7 +43,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col h-100" style='margin-bottom: auto'>
             <div class="card shadow-sm">
               <img src="{% static 'main/images/france.png' %}" class="d-block w-100" alt="Third Slide Image">
               <div class="card-body">
@@ -57,7 +57,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col h-100" style='margin-bottom: auto'>
             <div class="card shadow-sm">
               <img src="{% static 'main/images/spanish.png' %}" class="d-block w-100" alt="Third Slide Image">
               <div class="card-body">
