--- a/lang_school/users/templates/users/teacher_profile.html
+++ b/lang_school/users/templates/users/teacher_profile.html
@@ -14,7 +14,7 @@
 
 	<div class='row'>
 		<div class='col'>
-			<h2 class='p-1'>Профиль студента</h2>
+			<h2 class='p-2'>Профиль учителя</h2>
 		</div>
 	</div>
 
@@ -72,6 +72,7 @@
 		<div class='col'>
 			<h2>Сервисы</h2>
 		</div>
+	</div>
 	<div class="row justify-content-center">
 		<div class='body-calendar'>
 			<section class="ftco-section">
@@ -84,47 +85,51 @@
 					<div class="row">
 						<div class="col">
 							<div class="content w-100">
-								<div class="calendar-container">
-									<div class="calendar"> 
-									<div class="year-header"> 
-										<span class="left-button fa fa-chevron-left" id="prev"> </span> 
-										<span class="year" id="label"></span> 
-										<span class="right-button fa fa-chevron-right" id="next"> </span>
-									</div> 
-									<table class="months-table w-100"> 
-										<tbody>
-										<tr class="months-row">
-											<td class="month">Jan</td> 
-											<td class="month">Feb</td> 
-											<td class="month">Mar</td> 
-											<td class="month">Apr</td> 
-											<td class="month">May</td> 
-											<td class="month">Jun</td> 
-											<td class="month">Jul</td>
-											<td class="month">Aug</td> 
-											<td class="month">Sep</td> 
-											<td class="month">Oct</td>          
-											<td class="month">Nov</td>
-											<td class="month">Dec</td>
-										</tr>
-										</tbody>
-									</table> 
-									<table class="days-table w-100"> 
-										<td class="day">Sun</td> 
-										<td class="day">Mon</td> 
-										<td class="day">Tue</td> 
-										<td class="day">Wed</td> 
-										<td class="day">Thu</td> 
-										<td class="day">Fri</td> 
-										<td class="day">Sat</td>
+							<div class="calendar-container">
+								<div class="calendar"> 
+								<div class="year-header"> 
+									<span class="left-button fa fa-chevron-left" id="prev"> </span> 
+									<span class="year" id="label"></span> 
+									<span class="right-button fa fa-chevron-right" id="next"> </span>
+								</div> 
+								<table class="months-table w-100"> 
+									<tbody>
+									<tr class="months-row">
+										<td class="month">Jan</td> 
+										<td class="month">Feb</td> 
+										<td class="month">Mar</td> 
+										<td class="month">Apr</td> 
+										<td class="month">May</td> 
+										<td class="month">Jun</td> 
+										<td class="month">Jul</td>
+										<td class="month">Aug</td> 
+										<td class="month">Sep</td> 
+										<td class="month">Oct</td>          
+										<td class="month">Nov</td>
+										<td class="month">Dec</td>
+									</tr>
+									</tbody>
+								</table> 
+								
+								<table class="days-table w-100"> 
+									<td class="day">Sun</td> 
+									<td class="day">Mon</td> 
+									<td class="day">Tue</td> 
+									<td class="day">Wed</td> 
+									<td class="day">Thu</td> 
+									<td class="day">Fri</td> 
+									<td class="day">Sat</td>
+								</table>
+								<div class="frame"> 
+									<table class="dates-table w-100"> 
+									<tbody class="tbody">  
+										{{ calendar | safe }}            
+									</tbody> 
 									</table>
-									<div class="frame"> 
-										<table class="dates-table w-100"> 
-										<tbody class="tbody">  
-											{{ calendar | safe }}            
-										</tbody>
-										</table>
-									</div>
+								</div> 
+								{% if teacher %}
+								<button class="button" id="add-button">Add Event</button>
+								{% endif %}
 								</div>
 							</div>
 							<div class="events-container">
@@ -137,21 +142,21 @@
 											<div class="accordion accordion-flush" id="accordionFlushExample">
 												<div class="accordion-item">
 													<h2 class="accordion-header">
-														<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+														<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{ event.pk }}" aria-expanded="false" aria-controls="flush-collapse{{ event.pk }}">
 															{% if event.time.minute < 10 %}
 																{% with prefix=0 %}
-																	<div class="event-name"> {{ event.time.hour }}:{{ prefix }}{{ event.time.minute}} <br> {{ event.teacher.last_name }} {{ event.teacher.first_name }}</div>
+																	<div class="event-name"> {{ event.time.hour }}:{{ prefix }}{{ event.time.minute}} <br> {{ event.student.last_name }} {{ event.student.first_name }}</div>
 																	<div class="event-count"> {{ event.title }} </div>
 																{% endwith %}
 															{% else %}
 																{% with prefix="" %}
-																	<div class="event-name"> {{ event.time.hour }}:{{ prefix }}{{ event.time.minute}} <br> {{ event.teacher.last_name }} {{ event.teacher.first_name }}</div>
+																	<div class="event-name"> {{ event.time.hour }}:{{ prefix }}{{ event.time.minute}} <br> {{ event.student.last_name }} {{ event.student.first_name }}</div>
 																	<div class="event-count"> {{ event.title }} </div>
 																{% endwith %}
 															{% endif %}
 														</button>
 													</h2>
-													<div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+													<div id="flush-collapse{{ event.pk }}" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
 														<div class="accordion-body"> {{ event.description }} </div>
 													</div>
 												</div>
@@ -159,8 +164,9 @@
 										</div>
 									{% endfor %}
 								{% endif %}
-								</div>
-							{% comment %} <div class="dialog" id="dialog">
+
+							</div>
+							<div class="dialog" id="dialog">
 								<h2 class="dialog-header"> Add New Event </h2>
 								<form class="form" id="form">
 									<div class="form-container" align="center">
@@ -172,8 +178,8 @@
 									<input type="button" value="OK" class="button button-white" id="ok-button">
 									</div>
 								</form>
-								</div> {% endcomment %}
-							</div> 
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -188,5 +194,5 @@
 	<script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/popper.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="{% static 'js/main.js' %}"></script>
+	<script src="{% static 'js/main.js' %}"></script>    
 {% endblock  %}
