--- a/lang_school/main/templates/main/footer.html
+++ b/lang_school/main/templates/main/footer.html
@@ -1,5 +1,6 @@
-<div class="container">
-    <footer class="py-5">
+
+<footer class="bg-body-secondary">
+  <div class="container pt-3">
       <div class="row">
         <div class="col-6 col-md-2 mb-3">
           <h5>Section</h5>
@@ -47,7 +48,7 @@
         </div>
       </div>
   
-      <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+      <div class="d-flex flex-column flex-sm-row justify-content-between py-4 border-top">
         <p>© 2023 Company, Inc. All rights reserved.</p>
         <ul class="list-unstyled d-flex">
             <li class="ms-3">
@@ -59,5 +60,5 @@
           <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
         </ul>
       </div>
-    </footer>
   </div>
+</footer>
