--- a/lang_school/main/templates/main/index.html
+++ b/lang_school/main/templates/main/index.html
@@ -113,9 +113,9 @@
   </div> {% endcomment %}
       
   <!-- Reviews -->
-  <div class="container py-2">
+  <div class="container">
     <div class='bg-light bg-gradient'>
-      <h2 class="featurette-heading pb-3 fw-normal lh-1 text-center">Ваши отзывы</h2>
+      <h2 class="featurette-heading py-3 fw-normal lh-1 text-center">Ваши отзывы</h2>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col-md-4">
           <div class="d-flex flex-column">
@@ -161,8 +161,8 @@
   </div>
 
   <!-- State -->
-  <div class="container py-4 text-center">
-    <h2 class="featurette-heading pb-3 fw-normal lh-1">Штат</h2>
+  <div class="container py-2 text-center">
+    <h2 class="featurette-heading py-3 fw-normal lh-1">Штат</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 justify-content-center">
       <div class="col-lg-4 align-self-center">
         <div class="card mb-3" style="max-width: 540px;">
