--- a/lang_school/users/templates/users/teacher_profile.html
+++ b/lang_school/users/templates/users/teacher_profile.html
@@ -50,16 +50,10 @@
 			<h3>Статистика</h3>
 			<hr class='border-black border-2'>
 			<div class='row row-cols-auto text-black'>
-				<div class='col align-self-center'>
-					<p> Количество проведенных занятий: </p>
-				</div>
-				<div class='col align-self-center'>
-					<p> {{ events_count_done }} </p>
-				</div>
 			</div>
 			<div class='row row-cols-auto text-black'>
 				<div class='col col-lg-3 align-self-center'>
-					<p> Занятий всего: </p>
+					<p> Занятий проведено: </p>
 				</div>
 				<div class='col align-self-center'>
 					<p> {{ events_count_total }} </p>
@@ -85,100 +79,162 @@
 					<div class="row">
 						<div class="col">
 							<div class="content w-100">
-							<div class="calendar-container">
-								<div class="calendar"> 
-								<div class="year-header"> 
-									<span class="left-button fa fa-chevron-left" id="prev"> </span> 
-									<span class="year" id="label"></span> 
-									<span class="right-button fa fa-chevron-right" id="next"> </span>
-								</div> 
-								<table class="months-table w-100"> 
-									<tbody>
-									<tr class="months-row">
-										<td class="month">Jan</td> 
-										<td class="month">Feb</td> 
-										<td class="month">Mar</td> 
-										<td class="month">Apr</td> 
-										<td class="month">May</td> 
-										<td class="month">Jun</td> 
-										<td class="month">Jul</td>
-										<td class="month">Aug</td> 
-										<td class="month">Sep</td> 
-										<td class="month">Oct</td>          
-										<td class="month">Nov</td>
-										<td class="month">Dec</td>
-									</tr>
-									</tbody>
-								</table> 
-								
-								<table class="days-table w-100"> 
-									<td class="day">Sun</td> 
-									<td class="day">Mon</td> 
-									<td class="day">Tue</td> 
-									<td class="day">Wed</td> 
-									<td class="day">Thu</td> 
-									<td class="day">Fri</td> 
-									<td class="day">Sat</td>
-								</table>
-								<div class="frame"> 
-									<table class="dates-table w-100"> 
-									<tbody class="tbody">  
-										{{ calendar | safe }}            
-									</tbody> 
+								<div class="calendar-container">
+									<div class="calendar"> 
+									<div class="year-header"> 
+										<span class="left-button fa fa-chevron-left" id="prev"> </span> 
+										<span class="year" id="label"></span> 
+										<span class="right-button fa fa-chevron-right" id="next"> </span>
+									</div> 
+									<table class="months-table w-100"> 
+										<tbody>
+										<tr class="months-row">
+											<td class="month">Jan</td> 
+											<td class="month">Feb</td> 
+											<td class="month">Mar</td> 
+											<td class="month">Apr</td> 
+											<td class="month">May</td> 
+											<td class="month">Jun</td> 
+											<td class="month">Jul</td>
+											<td class="month">Aug</td> 
+											<td class="month">Sep</td> 
+											<td class="month">Oct</td>          
+											<td class="month">Nov</td>
+											<td class="month">Dec</td>
+										</tr>
+										</tbody>
+									</table> 
+									
+									<table class="days-table w-100"> 
+										<td class="day">Sun</td> 
+										<td class="day">Mon</td> 
+										<td class="day">Tue</td> 
+										<td class="day">Wed</td> 
+										<td class="day">Thu</td> 
+										<td class="day">Fri</td> 
+										<td class="day">Sat</td>
 									</table>
-								</div> 
-								{% if teacher %}
-								<button class="button" id="add-button">Add Event</button>
-								{% endif %}
+									<div class="frame"> 
+										<table class="dates-table w-100"> 
+										<tbody class="tbody">  
+											{{ calendar | safe }}            
+										</tbody> 
+										</table>
+									</div> 
+									</div>
 								</div>
-							</div>
 							<div class="events-container">
 								<div name='empty-card' class="event-card empty-card hidden">
-									<div class='event-name'>Занятий сегодня нет</div>
+									<div class='event-name px-3'>Занятий сегодня нет</div>
 								</div>
 								{% if events %}
 									{% for event in events %}
-										<div name='{{ event.time.day }}.{{ event.time.month }}.{{ event.time.year }}' class="event-card">
+										{% if event.type == 'personal' %}
+										<div name='{{ event.datetime.day }}.{{ event.datetime.month }}.{{ event.datetime.year }}' class="event-card">
 											<div class="accordion accordion-flush" id="accordionFlushExample">
 												<div class="accordion-item">
 													<h2 class="accordion-header">
 														<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{ event.pk }}" aria-expanded="false" aria-controls="flush-collapse{{ event.pk }}">
-															{% if event.time.minute < 10 %}
-																{% with prefix=0 %}
-																	<div class="event-name"> {{ event.time.hour }}:{{ prefix }}{{ event.time.minute}} <br> {{ event.student.last_name }} {{ event.student.first_name }}</div>
-																	<div class="event-count"> {{ event.title }} </div>
-																{% endwith %}
-															{% else %}
-																{% with prefix="" %}
-																	<div class="event-name"> {{ event.time.hour }}:{{ prefix }}{{ event.time.minute}} <br> {{ event.student.last_name }} {{ event.student.first_name }}</div>
-																	<div class="event-count"> {{ event.title }} </div>
-																{% endwith %}
-															{% endif %}
+															<div class="event-name">
+																{% if event.datetime.minute < 10 %}
+																	{% with prefix=0 %}
+																		{{ event.datetime.hour }}:{{ prefix }}{{ event.datetime.minute}}
+																	{% endwith %}
+																{% else %}
+																	{% with prefix="" %}
+																		<div class="event-name"> {{ event.datetime.hour }}:{{ prefix }}{{ event.datetime.minute}}
+																	{% endwith %}
+																{% endif %}
+																<br>
+																<i class="bi bi-person-fill" style='color: indigo'></i> {{ event.lessons.student.last_name }} {{ event.lessons.student.first_name }}
+															</div>
+															<div class="event-count pr-2">
+																{% if event.lessons.status == 'P' %}
+																	<i class="bi bi-clock text-warning"></i> 
+																{% elif event.lessons..status == 'C' %}
+																	<i class="bi bi-x-circle text-danger"></i>
+																{% else %}
+																	<i class="bi bi-check-circle text-success"></i> 
+																{% endif %}
+
+																{% if event.lessons.is_paid %}
+																	<i class="bi bi-wallet text-success"></i>
+																{% else %}
+																	<i class="bi bi-wallet text-danger"></i> 
+																{% endif %}
+																<br>
+																{{ event.lessons.title }}
+															</div>
 														</button>
 													</h2>
 													<div id="flush-collapse{{ event.pk }}" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-														<div class="accordion-body"> {{ event.description }} </div>
+														<div class="accordion-body"> 
+															<span style='font-weight: lighter; color: indigo'>HW: </span>{{ event.lessons.description }}
+														</div>
 													</div>
 												</div>
 											</div>
 										</div>
+										{% else %}
+										<div name='{{ event.datetime.day }}.{{ event.datetime.month }}.{{ event.datetime.year }}' class="event-card">
+											<div class="accordion accordion-flush" id="accordionFlushExample">
+												<div class="accordion-item">
+													<h2 class="accordion-header">
+														<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{ event.pk }}" aria-expanded="false" aria-controls="flush-collapse{{ event.pk }}">
+															<div class="event-name">
+																{% if event.datetime.minute < 10 %}
+																	{% with prefix=0 %}
+																		{{ event.datetime.hour }}:{{ prefix }}{{ event.datetime.minute}}
+																	{% endwith %}
+																{% else %}
+																	{% with prefix="" %}
+																		{{ event.datetime.hour }}:{{ prefix }}{{ event.datetime.minute}}
+																	{% endwith %}
+																{% endif %}
+																<br>
+																<i class="bi bi-people-fill" style='color: indigo'></i>
+																Group name
+															</div>
+															<div class="event-count">
+																{{ event.title }}
+															</div>
+														</button>
+													</h2>
+													<div id="flush-collapse{{ event.pk }}" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+														<div class="accordion-body">
+															{% for lesson in event.lessons %}
+																<div class='event-name'> 
+																	<span class='' style='font-weight: bold; color: indigo'>
+																		{{ lesson.student.last_name }} {{ lesson.student.first_name }}
+
+																		{% if lesson.status == 'P' %}
+																			<i class="bi bi-clock text-warning"></i> 
+																		{% elif lesson.status == 'C' %}
+																			<i class="bi bi-x-circle text-danger"></i>
+																		{% else %}
+																			<i class="bi bi-check-circle text-success"></i> 
+																		{% endif %}
+
+																		{% if lesson.is_paid %}
+																			<i class="bi bi-wallet text-success"></i>
+																		{% else %}
+																			<i class="bi bi-wallet text-danger"></i> 
+																		{% endif %}
+																	</span>
+																	<div class='event-name'> 
+																		<span style='font-weight: lighter; color: indigo'>HW: </span>{{ lesson.description }}
+																	</div>
+																	<hr class='border-primary p-0 m-0'>
+																</div>
+															{% endfor %}
+														</div>
+													</div>														
+												</div>
+											</div>
+										</div>
+										{% endif %}
 									{% endfor %}
 								{% endif %}
-
-							</div>
-							<div class="dialog" id="dialog">
-								<h2 class="dialog-header"> Add New Event </h2>
-								<form class="form" id="form">
-									<div class="form-container" align="center">
-									<label class="form-label" id="valueFromMyButton" for="name">Event name</label>
-									<input class="input" type="text" id="name" maxlength="36">
-									<label class="form-label" id="valueFromMyButton" for="count">Number of people to invite</label>
-									<input class="input" type="number" id="count" min="0" max="1000000" maxlength="7">
-									<input type="button" value="Cancel" class="button" id="cancel-button">
-									<input type="button" value="OK" class="button button-white" id="ok-button">
-									</div>
-								</form>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -187,7 +243,6 @@
 		</div>
     </div>
 </div>
-</body>
 {% endblock %}
 
 {% block 'js' %}
