--- a/lang_school/main/templates/main/index.html
+++ b/lang_school/main/templates/main/index.html
@@ -24,7 +24,6 @@
   {% include 'main/carousel.html' %}
 
   <!-- Cards -->
-
   <div class="album py-2">
     <div class='container py-2'>
       <div class="row row-cols-1row-cols-sm-2 row-cols-md-3 g-3">
@@ -33,11 +32,15 @@
             <img src="{% static 'main/images/english.png' %}" class="d-block w-100" alt="Third Slide Image">
             <div class="card-body d-flex flex-column align-items-center justify-content-center">
               <h5 class="card-title align-self-start">English courses</h5>
-              <p class="card-text">{% lorem 50 w random %}</p>
+              <p class="card-text">{% lorem 1 b random %}</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <span>95 учеников</span>
-              <button class="btn btn-primary">Подробнее</button>
+              <a href="{% url 'english' %}" style='text-light'>
+                <button class="btn btn-primary">
+                  Подробнее
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -46,11 +49,15 @@
             <img src="{% static 'main/images/french.png' %}" class="d-block w-100" alt="Third Slide Image">
             <div class="card-body d-flex flex-column align-items-center justify-content-center">
               <h5 class="card-title align-self-start">French courses</h5>
-              <p class="card-text">{% lorem 25 w random %}</p>
+              <p class="card-text">{% lorem 1 b random %}</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <span>66 учеников</span>
-              <button class="btn btn-primary">Подробнее</button>
+              <a href="{% url 'french' %}" style='text-light'>
+                <button class="btn btn-primary">
+                  Подробнее
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -59,11 +66,15 @@
             <img src="{% static 'main/images/spanish.png' %}" class="d-block w-100" alt="Third Slide Image">
             <div class="card-body d-flex flex-column align-items-center justify-content-center">
               <h5 class="card-title align-self-start">Spanish courses</h5>
-              <p class="card-text">{% lorem 25 w random %}</p>
+              <p class="card-text">{% lorem 1 b random %}</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <span>30 учеников</span>
-              <button class="btn btn-primary">Подробнее</button>
+              <a href="{% url 'spanish' %}" style='text-light'>
+                <button class="btn btn-primary">
+                  Подробнее
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -126,7 +137,7 @@
                 <small class="text-body-secondary">С нами 3 месяца</small>
               </p>
               <hr class='w-100'>
-              <p>{% lorem 25 w random %}</p>
+              <p>{% lorem 1 b random %}</p>
             </div>
           </div>
         </div>
@@ -139,7 +150,7 @@
                 <small class="text-body-secondary">С нами 3 месяца</small>
               </p>
               <hr class='w-100'>
-              <p>{% lorem 25 w random %}</p>
+              <p>{% lorem 1 b random %}</p>
             </div>
           </div>
         </div>
@@ -152,7 +163,7 @@
                 <small class="text-body-secondary">С нами 3 месяца</small>
               </p>
               <hr class='w-100'>
-              <p>{% lorem 50 w random %}</p>
+              <p>{% lorem 1 b random %}</p>
             </div>
           </div>
         </div>
@@ -198,5 +209,4 @@
       </div>
     </div>
   </div>
-
 {% endblock content %}
