--- a/lang_school/users/templates/users/profile.html
+++ b/lang_school/users/templates/users/profile.html
@@ -72,6 +72,21 @@
 		<div class='col'>
 			<h2>Сервисы</h2>
 		</div>
+	</div>
+
+	<div class='row'>
+		<div class='col'>
+			<h2>Упражнения</h2>
+			<ul>
+				{% for exercise in exercises %}
+					<a href={% url "exercises_words" id=exercise step=1 %}> Exercise {{ exercise }}</a>
+				{% endfor %}
+			</ul>
+		</div>
+	</div>
+
+
+	<!-- Calendar -->
 	<div class="row justify-content-center">
 		<div class='body-calendar'>
 			<section class="ftco-section">
@@ -129,29 +144,51 @@
 							</div>
 							<div class="events-container">
 								<div name='empty-card' class="event-card empty-card hidden">
-									<div class='event-name'>Занятий сегодня нет</div>
+									<div class='event-name px-3'>Занятий сегодня нет</div>
 								</div>
 								{% if events %}
 									{% for event in events %}
-										<div name='{{ event.time.day }}.{{ event.time.month }}.{{ event.time.year }}' class="event-card">
+										<div name='{{ event.datetime.day }}.{{ event.datetime.month }}.{{ event.datetime.year }}' class="event-card">
 											<div class="accordion accordion-flush" id="accordionFlushExample">
 												<div class="accordion-item">
 													<h2 class="accordion-header">
-														<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-															{% if event.time.minute < 10 %}
-																{% with prefix=0 %}
-																	<div class="event-name"> {{ event.time.hour }}:{{ prefix }}{{ event.time.minute}} <br> {{ event.teacher.last_name }} {{ event.teacher.first_name }}</div>
-																	<div class="event-count"> {{ event.title }} </div>
-																{% endwith %}
-															{% else %}
-																{% with prefix="" %}
-																	<div class="event-name"> {{ event.time.hour }}:{{ prefix }}{{ event.time.minute}} <br> {{ event.teacher.last_name }} {{ event.teacher.first_name }}</div>
-																	<div class="event-count"> {{ event.title }} </div>
-																{% endwith %}
-															{% endif %}
+														<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{ event.pk }}" aria-expanded="false" aria-controls="flush-collapse{{ event.pk }}">
+															<div class="event-name"> 
+																{% if event.datetime.minute < 10 %}
+																	{% with prefix=0 %}
+																		{{ event.datetime.hour }}:{{ prefix }}{{ event.datetime.minute}} 
+																	{% endwith %}
+																{% else %}
+																	{% with prefix="" %}
+																		{{ event.datetime.hour }}:{{ prefix }}{{ event.datetime.minute}}
+																	{% endwith %}
+																{% endif %}
+																<br>
+																<i class="bi bi-mortarboard-fill"></i>
+																{{ event.teacher.last_name }} {{ event.teacher.first_name }}
+															</div>
+															<div class="event-count pr-2">
+																{% if event.status == 'P' %}
+																	<i class="bi bi-clock text-warning"></i> 
+																{% elif event.status == 'C' %}
+																	<i class="bi bi-x-circle text-danger"></i>
+																{% else %}
+																	<i class="bi bi-check-circle text-success"></i> 
+																{% endif %}
+
+																{% if event.is_paid %}
+																	<i class="bi bi-wallet text-success"></i>
+
+																{% else %}
+																	<i class="bi bi-wallet text-danger"></i> 
+																{% endif %}
+																
+																<br>
+																{{ event.title }}
+															</div>
 														</button>
 													</h2>
-													<div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+													<div id="flush-collapse{{ event.pk }}" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
 														<div class="accordion-body"> {{ event.description }} </div>
 													</div>
 												</div>
@@ -160,19 +197,6 @@
 									{% endfor %}
 								{% endif %}
 								</div>
-							{% comment %} <div class="dialog" id="dialog">
-								<h2 class="dialog-header"> Add New Event </h2>
-								<form class="form" id="form">
-									<div class="form-container" align="center">
-									<label class="form-label" id="valueFromMyButton" for="name">Event name</label>
-									<input class="input" type="text" id="name" maxlength="36">
-									<label class="form-label" id="valueFromMyButton" for="count">Number of people to invite</label>
-									<input class="input" type="number" id="count" min="0" max="1000000" maxlength="7">
-									<input type="button" value="Cancel" class="button" id="cancel-button">
-									<input type="button" value="OK" class="button button-white" id="ok-button">
-									</div>
-								</form>
-								</div> {% endcomment %}
 							</div> 
 						</div>
 					</div>
