--- a/lang_school/users/templates/users/sign_up.html
+++ b/lang_school/users/templates/users/sign_up.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -24,28 +25,15 @@
         <div class="container container-table text-center">
             <div class="row vertical-center-row">
                 <div class="col-md-4 col-md-offset-4 p-4 m-auto shadow">
-                    <form method='POST'>
+                    {% if form.errors %}
+                    <p> Ошибка при заполнении полей </p>
+                    {% endif %}
+                    <form method='POST' action='{% url "sign_up" %}'>
                         {% csrf_token %}
-                        <img src="http://placehold.it/150x150/2c3e50/3498db&text=Logo" class="shadow" alt="logo">
-                        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-                        <div class="form-floating">
-                            <input type="login" name='login' class="form-control" id="floatingInput" placeholder="login">
-                            <label for="floatingInput">Email address</label>
-                        </div>
-                        <div class="form-floating">
-                            <input type="password" name='password' class="form-control" id="floatingPassword" placeholder="Password">
-                            <label for="floatingPassword">Password</label>
-                            <a class='btn btn-lg btn-warning shadow' href="{% url 'reset_password' %}">
-                                Забыли пароль?
-                            </a>
-                        </div>
-                        <div class="checkbox mb-3">
-                            <label>
-                                <input type="checkbox" value="remember-me"> Remember me
-                            </label>
-                        </div>
-                        <button class="w-100 btn btn-lg btn-primary shadow" type="submit">Sign in</button>
-                        <p class="mt-5 mb-3 text-muted">© 2017–2021</p>
+                        
+                        {{ form.as_p }}
+                        
+                        <button class="w-100 btn btn-lg btn-primary" type="submit">Submit</button>
                     </form>
                 </div>
             </div>
