New Profile page. Add Notifitations field. Global CSS update

--- a/lang_school/main/templates/main/navbar.html
+++ b/lang_school/main/templates/main/navbar.html
@@ -1,40 +1,42 @@
+{% load static %}
 
-<nav class="navbar navbar-expand-md bg-dark sticky-top border-bottom" data-bs-theme="dark">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-        </a>
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li>
-            <a href="/" class="nav-link px-2 text-secondary"><i class="bi bi-house-fill"></i></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Курсы
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'english' %}">Английский язык</a></li>
-              <li><a class="dropdown-item" href="{% url 'french' %}">Французский язык</a></li>
-              <li><a class="dropdown-item" href="{% url 'spanish' %}">Испанский язык</a></li>
-            </ul>
-          </li>
-          <li><a href="{% url 'about' %}" class="nav-link px-2 text-white">О проекте</a></li>
-          <li><a href="{% url 'faq' %}" class="nav-link px-2 text-white">FAQ</a></li>
-          <li><a href="{% url 'portfolio' %}" class="nav-link px-2 text-white">О себе</a></li>
-          <li><a href="{% url 'contacts' %}" class="nav-link px-2 text-white">Контакты</a></li>
-        </ul>
+<nav class="navbar navbar-expand-md w-100 sticky-top">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto mb-lg-0">
+            <li>
+              <a href='{% url "" %}' class="nav-link px-2">Lang School Name</a>
+              {% comment %} <i class="bi bi-house-fill"></i> {% endcomment %}
+              {% comment %} <img src="{% static 'main/images/logo_mini.png' %}" width="50" height="50" class="img align-self-center" alt='Photo'> {% endcomment %}
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Курсы
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'english' %}">Английский язык</a></li>
+                <li><a class="dropdown-item" href="{% url 'french' %}">Французский язык</a></li>
+                <li><a class="dropdown-item" href="{% url 'spanish' %}">Испанский язык</a></li>
+              </ul>
+            </li>
+            <li><a href="{% url 'about' %}" class="nav-link px-2">О проекте</a></li>
+            <li><a href="{% url 'faq' %}" class="nav-link px-2">FAQ</a></li>
+            <li><a href="{% url 'portfolio' %}" class="nav-link px-2">О себе</a></li>
+            <li><a href="{% url 'contacts' %}" class="nav-link px-2">Контакты</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-end">
-        {% if user.is_authenticated %}
-
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li>
-            <span class='nav-link d-flex text-white px-2 text-decoration-none'>{{ user.last_name }} {{ user.first_name }}</span>
-          </li>
-        </ul> 
-        <div class="flex-shrink-0 dropdown">
+    </div>
+    <div class="navbar align-self-start">
+      {% if user.is_authenticated %}
+        <div class="dropdown pt-2">
           <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class='px-2 text-light'>{{ user.last_name }} {{ user.first_name }}</span>
             <img src="http://placehold.it/400x500/2c3e50/3498db&text=User photo" alt="User photo" width="32" height="32" class="rounded-circle">
           </a>
           <ul class="dropdown-menu text-small shadow" style="">
@@ -43,14 +45,10 @@
             <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
           </ul>
         </div>
-        {% else %}
-        <a href="{% url 'auth' %}">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-        </a>
-        <a href="{% url 'sign_up' %}">
-          <button type="button" class="btn btn-warning">Sign-up</button>
-        </a>
-        {% endif %}
-        </div>
+      {% else %}
+        <a class="btn me-2" href="{% url 'auth' %}" role="button">Login</a>
+        <a class="btn me-2" href="{% url 'sign_up' %}" role="button">Sign-up</a>
+      {% endif %}
     </div>
+  </div>
 </nav>
