--- a/lang_school/main/templates/main/base.html
+++ b/lang_school/main/templates/main/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -11,6 +13,8 @@
     <!-- Font Awesome CSS-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'main/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/navbar.css' %}">
     {% block 'style' %}{% endblock  %}
   </head>
   <body>
