--- a/lang_school/main/templates/main/carousel.html
+++ b/lang_school/main/templates/main/carousel.html
@@ -10,23 +10,23 @@
         <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="{% static 'main/images/solo_learn.png' %}" class="d-block w-100" alt="First Slide Image">
-            <div class="carousel-caption d-none d-md-block bg-dark">
+            <div class="carousel-caption d-none d-md-block mx-3">
                 <h5>Индивидуальные занятия</h5>
                 <p>{% lorem 15 w random %}</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="{% static 'main/images/group_learn.png' %}" class="d-block w-100" alt="Second Slide Image">
-            <div class="carousel-caption d-none d-md-block bg-dark">
-            <h5>Групповые занятия</h5>
-            <p>{% lorem 15 w random %}</p>
+            <div class="carousel-caption d-none d-md-block mx-3">
+                <h5>Групповые занятия</h5>
+                <p>{% lorem 15 w random %}</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="{% static 'main/images/remote_learn.png' %}" class="d-block w-100" alt="Third Slide Image">
-            <div class="carousel-caption d-none d-md-block bg-dark">
-            <h5>Удаленный формат</h5>
-            <p>{% lorem 15 w random %}</p>
+            <div class="carousel-caption d-none d-md-block mx-3">
+                <h5>Удаленный формат</h5>
+                <p>{% lorem 15 w random %}</p>
             </div>
         </div>
         </div>
