--- a/lang_school/main/templates/main/index.html
+++ b/lang_school/main/templates/main/index.html
@@ -2,22 +2,32 @@
 {% load static %}
 
 {% block title %}Главная{% endblock  %}
+{% block 'style' %}
+<link rel="stylesheet" href="{% static 'main/css/index.css' %}">
+{% endblock  %}
 
 {% block content %}
   <!-- Preview  -->
-  <div class='container'>
-      <div class="text-body-emphasis mu-5 bg-body-secondary">
-          <div class="row justify-content-center">
-              <div class='col-4 pt-4'>
-                  <img src={% static 'main/images/main_photo.png' %} width='300' class="img-fluid" alt='Photo'>
-              </div>
-              <div class="col-4 align-self-center">
-                  <h1 class="display-4 fst-italic">{% lorem 5 w random %}</h1>
-                  <p class="lead my-3">{% lorem 25 w random %}</p>
-                  <p class="lead mb-5"><a href="portfolio" class="text-body-emphasis fw-bold">Подробнее</a></p>
-              </div>
-          </div> 
-      </div>
+  <div class='container mt-5'>
+    <div class="text-body-emphasis preview-container">
+      <div class="row row-cols-2 row-cols-sm-1 justify-content-center">
+        <div class='col-8 col-sm-8 col-md-4 col-xl-4 pt-2 align-self-end'>
+          <img src="{% static 'main/images/main_photo.png' %}" width='300' class="img-fluid w-auto" alt='Photo'>
+        </div>
+        <div class="col-12 col-sm-12 col-md-8 col-xl-6 align-self-center preview-text">
+          <div class="preview-header p-2">
+            <h1 class="preview-header-text-main display-5 text-end text-uppercase">Здравствуйте</h1>
+            <h5 class="preview-header-text-secondary text-end">Я - преподаватель иностранных языков</h5>
+          </div>
+          <div class="px-3">
+            <p class="lead my-3">Открыть новые возможности для коммуникации, обогатить знания о других культурах, помочь лучше понять наш мир - всё это и не только помогает изучение нового для вас языка!</p>
+            <button class="btn mb-5 text-end">
+              <a href="portfolio" class="px-5">Подробнее</a>
+            </button>
+          </div>
+        </div>
+      </div> 
+    </div>
   </div>
   
   <!-- Caruosel -->
@@ -26,55 +36,43 @@
   <!-- Cards -->
   <div class="album py-2">
     <div class='container py-2'>
-      <div class="row row-cols-1row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col-md-4">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col-xl-4 col-md-12">
           <div class="card d-flex flex-column h-100">
             <img src="{% static 'main/images/english.png' %}" class="d-block w-100" alt="Third Slide Image">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <h5 class="card-title align-self-start">English courses</h5>
-              <p class="card-text">{% lorem 1 b random %}</p>
+            <div class="card-body d-flex flex-column justify-content-start">
+              <h5 class="card-title align-self-start">English course</h5>
+              <p class="card-text">Английский - безусловно самый популярный международный язык в настоящее время. Он открывает бесчисленные возможности: путешествия, новая работа, общение с людьми всего мира. Знание этого языка помогает расширить горизонты и обогатить свою жизнь независимо от причин, по которым вы его изучаете.</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <span>95 учеников</span>
-              <a href="{% url 'english' %}" style='text-light'>
-                <button class="btn btn-primary">
-                  Подробнее
-                </button>
-              </a>
+              <a class="btn" href="{% url 'english' %}" role="button">Перейти к курсу</a>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-xl-4 col-md-12">
           <div class="card d-flex flex-column h-100">
             <img src="{% static 'main/images/french.png' %}" class="d-block w-100" alt="Third Slide Image">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <h5 class="card-title align-self-start">French courses</h5>
-              <p class="card-text">{% lorem 1 b random %}</p>
+            <div class="card-body d-flex flex-column justify-content-start">
+              <h5 class="card-title align-self-start">French course</h5>
+              <p class="card-text">Французский - язык любви, изящности и культуры. Любое предложение сможет зазвучать из ваших уст как романтическая баллада. Благодаря этому языку вы сможете погрузиться в богатство французской литературы, моды и исскуства Франции. Учите и одновременно наслаждайтесь красотой этого языка! </p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <span>66 учеников</span>
-              <a href="{% url 'french' %}" style='text-light'>
-                <button class="btn btn-primary">
-                  Подробнее
-                </button>
-              </a>
+              <a class="btn" href="{% url 'french' %}" role="button">Перейти к курсу</a>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-xl-4 col-md-12">
           <div class="card d-flex flex-column h-100">
             <img src="{% static 'main/images/spanish.png' %}" class="d-block w-100" alt="Third Slide Image">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <h5 class="card-title align-self-start">Spanish courses</h5>
-              <p class="card-text">{% lorem 1 b random %}</p>
+            <div class="card-body d-flex flex-column justify-content-start">
+              <h5 class="card-title align-self-start">Spanish course</h5>
+              <p class="card-text">Испанский - третий по популярности язык в мире. В этом языке 60% англо-саксонских корней и он необыкновенно прост в изучении. Знание этого языка открывает вам доступ ко многим испаноязычным странам: Мексике, Аргентине, Кубе, Колумбии, Чили и другим! </p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <span>30 учеников</span>
-              <a href="{% url 'spanish' %}" style='text-light'>
-                <button class="btn btn-primary">
-                  Подробнее
-                </button>
-              </a>
+              <a class="btn" href="{% url 'spanish' %}" role="button">Перейти к курсу</a>
             </div>
           </div>
         </div>
@@ -124,47 +122,45 @@
   </div> {% endcomment %}
       
   <!-- Reviews -->
-  <div class="container">
-    <div class='bg-light bg-gradient'>
-      <h2 class="featurette-heading py-3 fw-normal lh-1 text-center">Ваши отзывы</h2>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col-md-4">
-          <div class="d-flex flex-column">
-            <div class="d-flex flex-column px-3 h-100 align-items-center justify-content-center">
-              <img src="http://placehold.it/300x300/2c3e50/3498db&text=Photo" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Third Slide Image">
-              <p>
-                <h2 class="fw-normal">User #1</h2>
-                <small class="text-body-secondary">С нами 3 месяца</small>
-              </p>
-              <hr class='w-100'>
-              <p>{% lorem 1 b random %}</p>
-            </div>
+  <div class="container reviews-container">
+    <h2 class="featurette-heading py-3 fw-normal lh-1 text-center">Ваши отзывы</h2>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+      <div class="review-card-not-even col-xl-4 col-md-12">
+        <div class="d-flex flex-column">
+          <div class="d-flex flex-column px-3 h-100 align-items-center justify-content-center">
+            <img src="http://placehold.it/300x300/2c3e50/3498db&text=Photo" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Third Slide Image">
+            <p>
+              <h2 class="fw-normal">User #1</h2>
+              <small class="text-body-secondary">С нами 3 месяца</small>
+            </p>
+            <hr class='w-100'>
+            <p>{% lorem 1 b random %}</p>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="d-flex flex-column">
-            <div class="d-flex flex-column h-100 align-items-center justify-content-center">
-              <img src="http://placehold.it/300x300/2c3e50/3498db&text=Photo" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Third Slide Image">
-              <p>
-                <h2 class="fw-normal">User #2</h2>
-                <small class="text-body-secondary">С нами 3 месяца</small>
-              </p>
-              <hr class='w-100'>
-              <p>{% lorem 1 b random %}</p>
-            </div>
+      </div>
+      <div class="review-card-even col-xl-4 col-md-12">
+        <div class="d-flex flex-column">
+          <div class="d-flex flex-column h-100 align-items-center justify-content-center">
+            <img src="http://placehold.it/300x300/2c3e50/3498db&text=Photo" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Third Slide Image">
+            <p>
+              <h2 class="fw-normal">User #2</h2>
+              <small class="text-body-secondary">С нами 3 месяца</small>
+            </p>
+            <hr class='w-100'>
+            <p>{% lorem 1 b random %}</p>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="d-flex flex-column">
-            <div class="d-flex flex-column px-3 h-100 align-items-center justify-content-center">
-              <img src="http://placehold.it/300x300/2c3e50/3498db&text=Photo" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Third Slide Image">
-              <p>
-                <h2 class="fw-normal">User #3</h2>
-                <small class="text-body-secondary">С нами 3 месяца</small>
-              </p>
-              <hr class='w-100'>
-              <p>{% lorem 1 b random %}</p>
-            </div>
+      </div>
+      <div class="review-card-not-even col-xl-4 col-md-12">
+        <div class="d-flex flex-column">
+          <div class="d-flex flex-column px-3 h-100 align-items-center justify-content-center">
+            <img src="http://placehold.it/300x300/2c3e50/3498db&text=Photo" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Third Slide Image">
+            <p>
+              <h2 class="fw-normal">User #3</h2>
+              <small class="text-body-secondary">С нами 3 месяца</small>
+            </p>
+            <hr class='w-100'>
+            <p>{% lorem 1 b random %}</p>
           </div>
         </div>
       </div>
@@ -172,14 +168,16 @@
   </div>
 
   <!-- State -->
-  <div class="container py-2 text-center">
+  <div class="container py-2 text-center state-container">
     <h2 class="featurette-heading py-3 fw-normal lh-1">Штат</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 justify-content-center">
-      <div class="col-lg-4 align-self-center">
+      <div class="col-xl-4 col-md-12 align-self-center">
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="http://placehold.it/300x450/2c3e50/3498db&text=Photo" class="d-block w-100" alt="Third Slide Image">
+              <div class="d-flex flex-column h-100">
+                <img src="http://placehold.it/300x450/2c3e50/3498db&text=Photo" class="d-block w-100 h-100" alt="Photo">
+              </div>
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -191,11 +189,13 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-xl-4 col-md-12 align-content-center">
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="http://placehold.it/300x450/2c3e50/3498db&text=Photo" class="d-block w-100" alt="Third Slide Image">
+              <div class="d-flex flex-column h-100">
+                <img src="http://placehold.it/300x450/2c3e50/3498db&text=Photo" class="d-block w-100 h-100" alt="Photo">
+              </div>            
             </div>
             <div class="col-md-8">
               <div class="card-body">
