--- a/lang_school/users/templates/users/auth.html
+++ b/lang_school/users/templates/users/auth.html
@@ -20,32 +20,34 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
         <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     </head>
-    <body class='bg-warning'>
+    <body class=''>
         <div class="container container-table text-center">
             <div class="row vertical-center-row">
-                <div class="col-md-4 col-md-offset-4 p-4 m-auto shadow">
+                <div class="auth-card col-md-4 col-md-offset-4 p-4 m-auto shadow">
                     <form method='POST'>
                         {% csrf_token %}
-                        <img src="http://placehold.it/150x150/2c3e50/3498db&text=Logo" class="shadow" alt="logo">
-                        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-                        <div class="form-floating">
+                        <a href={% url "" %}>
+                            <img src="{% static "main/images/logo_mini.png" %}" class="pt-3" alt="logo">
+                        </a>
+                        {% comment %} <img src="http://placehold.it/150x150/2c3e50/3498db&text=Logo" class="shadow" alt="logo"> {% endcomment %}
+                        <div class="form-floating pb-2">
                             <input type="login" name='login' class="form-control" id="floatingInput" placeholder="login">
-                            <label for="floatingInput">Email address</label>
+                            <label for="floatingInput">Login</label>
                         </div>
                         <div class="form-floating">
                             <input type="password" name='password' class="form-control" id="floatingPassword" placeholder="Password">
                             <label for="floatingPassword">Password</label>
-                            <a class='btn btn-lg btn-warning shadow' href="{% url 'reset_password' %}">
-                                Забыли пароль?
-                            </a>
                         </div>
-                        <div class="checkbox mb-3">
+                        <div class="checkbox my-2 text-light">
                             <label>
-                                <input type="checkbox" value="remember-me"> Remember me
+                                <input class='text' type="checkbox" value="remember-me"> Remember me
                             </label>
                         </div>
-                        <button class="w-100 btn btn-lg btn-primary shadow" type="submit">Sign in</button>
-                        <p class="mt-5 mb-3 text-muted">© 2017–2021</p>
+                        <button class="w-100 btn btn-lg shadow" type="submit">Sign in</button>
+                        <a class='btn btn-lg mt-2 shadow' href="{% url 'reset_password' %}">
+                            Забыли пароль?
+                        </a>
+                        <p class="mt-5 text-light">Lang School Name</p>
                     </form>
                 </div>
             </div>
