--- a/lang_school/users/templates/users/profile.html
+++ b/lang_school/users/templates/users/profile.html
@@ -6,13 +6,218 @@
 {% block 'style' %}
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="{% static 'css/users_base.css' %}"> -->
 	<link rel="stylesheet" href="{% static 'css/calendar.css' %}">
+	<link rel="stylesheet" href="{% static 'css/profile.css' %}">
 {% endblock  %}
 
 {% block content %}
-<div class="container bg-body-secondary">
+<div class="container page pt-3">
+	<ul class="nav nav-tabs" id="myTab" role="tablist">
+		<li class="nav-item profile-nav-item" role="presentation">
+		  <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#services-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Сервисы</button>
+		</li>
+		<li class="nav-item profile-nav-item" role="presentation">
+		  <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Профиль</button>
+		</li>
+		<li class="nav-item profile-nav-item" role="presentation">
+		  <button class="nav-link disabled-nav-item" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false" disabled>To be continued...</button>
+		</li>
+	  </ul>
+	  <div class="tab-content" id="myTabContent">
+		<div class="tab-pane fade show active" id="services-tab-pane" role="tabpanel" aria-labelledby="services-tab" tabindex="0">
+			<!-- Services -->
 
-	<div class='row'>
+			<!-- Calendar -->
+			<div class="row justify-content-center">
+				<div class='body-calendar'>
+					<div class="container">
+						<div class="row justify-content-center">
+							<div class="col text-center">
+								<h2 class="heading-section">Календарь</h2>
+								<p> 🛠 Данный сервис некорректно отображается с телефонов и планшетов. Находится в работе 🛠</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-9">
+								<div class="content w-100">
+									<div class="calendar-container">
+										<div class="calendar"> 
+										<div class="year-header"> 
+											<span class="left-button fa fa-chevron-left" id="prev"> </span> 
+											<span class="year" id="label"></span> 
+											<span class="right-button fa fa-chevron-right" id="next"> </span>
+										</div> 
+										<table class="months-table w-100"> 
+											<tbody>
+											<tr class="months-row">
+												<td class="month">Jan</td> 
+												<td class="month">Feb</td> 
+												<td class="month">Mar</td> 
+												<td class="month">Apr</td> 
+												<td class="month">May</td> 
+												<td class="month">Jun</td> 
+												<td class="month">Jul</td>
+												<td class="month">Aug</td> 
+												<td class="month">Sep</td> 
+												<td class="month">Oct</td>          
+												<td class="month">Nov</td>
+												<td class="month">Dec</td>
+											</tr>
+											</tbody>
+										</table> 
+										<table class="days-table w-100"> 
+											<td class="day">Sun</td> 
+											<td class="day">Mon</td> 
+											<td class="day">Tue</td> 
+											<td class="day">Wed</td> 
+											<td class="day">Thu</td> 
+											<td class="day">Fri</td> 
+											<td class="day">Sat</td>
+										</table>
+										<div class="frame"> 
+											<table class="dates-table w-100"> 
+											<tbody class="tbody">  
+												{{ calendar | safe }}            
+											</tbody>
+											</table>
+										</div>
+									</div>
+								</div>
+								<div class="events-container">
+									<div name='empty-card' class="event-card empty-card hidden">
+										<div class='event-name px-3'>Занятий сегодня нет</div>
+									</div>
+									{% if events %}
+										{% for event in events %}
+											<div name='{{ event.datetime.day }}.{{ event.datetime.month }}.{{ event.datetime.year }}' class="event-card">
+												<div class="accordion accordion-flush" id="accordionFlushExample">
+													<div class="accordion-item">
+														<h2 class="accordion-header">
+															<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{ event.pk }}" aria-expanded="false" aria-controls="flush-collapse{{ event.pk }}">
+																<div class="event-name"> 
+																	{% if event.datetime.minute < 10 %}
+																		{% with prefix=0 %}
+																			{{ event.datetime.hour }}:{{ prefix }}{{ event.datetime.minute}} 
+																		{% endwith %}
+																	{% else %}
+																		{% with prefix="" %}
+																			{{ event.datetime.hour }}:{{ prefix }}{{ event.datetime.minute}}
+																		{% endwith %}
+																	{% endif %}
+																	<br>
+																	<i class="bi bi-mortarboard-fill"></i>
+																	{{ event.teacher.last_name }} {{ event.teacher.first_name }}
+																</div>
+																<div class="event-count pr-2">
+																	{% if event.status == 'P' %}
+																		<i class="bi bi-clock text-warning"></i> 
+																	{% elif event.status == 'C' %}
+																		<i class="bi bi-x-circle text-danger"></i>
+																	{% else %}
+																		<i class="bi bi-check-circle text-success"></i> 
+																	{% endif %}
+
+																	{% if event.is_paid %}
+																		<i class="bi bi-wallet text-success"></i>
+
+																	{% else %}
+																		<i class="bi bi-wallet text-danger"></i> 
+																	{% endif %}
+																	
+																	<br>
+																	{{ event.title }}
+																</div>
+															</button>
+														</h2>
+														<div id="flush-collapse{{ event.pk }}" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+															<div class="accordion-body"> {{ event.description }} </div>
+														</div>
+													</div>
+												</div>
+											</div>
+										{% endfor %}
+									{% endif %}
+									</div>
+								</div> 
+							</div>
+							<div class="notifications col-3">
+								<h4 class="notification-title text-center py-3">Уведомления</h4>
+								<div class="row row-cols-1">
+
+
+									{% if exercises %}
+										{% for ex in exercises  %}
+											<div class="notification notification-exercise col">
+												Новое упражнение -
+												<a href={% url "exercises_words" id=ex step=1 %} class="ex_name"> Exercise {{ ex }}.</a>
+											</div>
+										{% endfor %}
+									{% endif %}
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+			<!-- User Info -->		
+			<div class="row justify-content-center bg-body-secondary">
+				<div class='col-lg-auto my-3'>
+					<img src="http://placehold.it/400x500/2c3e50/3498db&text=User photo" class="bd-placeholder-img" width="200" height="250" alt="User photo">
+				</div>
+				<div class="col my-3">
+					<div class=''>
+						<div class='col align-self-center'>
+							<h3>Личные данные</h3>
+							<hr class='border-black border-2'>
+							<div class='row row-cols-auto text-black'>
+								<div class='col col-lg-3 align-self-center'>
+									<p> Имя: </p>
+								</div>
+								<div class='col align-self-center'>
+									<p> {{ user.first_name }} </p>
+								</div>
+							</div> 
+							<div class='row row-cols-auto text-black align-self-center'>
+								<div class='col col-lg-3'>
+									<p> Фамилия: </p>
+								</div>
+								<div class='col align-self-center'>
+									<p> {{ user.last_name }} </p>
+								</div>
+							</div> 
+						</div> 
+					</div> 
+				</div> 
+				<div class="col my-3">
+					<h3>Статистика</h3>
+					<hr class='border-black border-2'>
+					<div class='row row-cols-auto text-black'>
+						<div class='col align-self-center'>
+							<p> Количество проведенных занятий: </p>
+						</div>
+						<div class='col align-self-center'>
+							<p> {{ events_count_done }} </p>
+						</div>
+					</div>
+					<div class='row row-cols-auto text-black'>
+						<div class='col col-lg-3 align-self-center'>
+							<p> Занятий всего: </p>
+						</div>
+						<div class='col align-self-center'>
+							<p> {{ events_count_total }} </p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">To be continued...</div>
+	  </div>
+
+	{% comment %} <div class='row'>
 		<div class='col'>
 			<h2 class='p-1'>Профиль студента</h2>
 		</div>
@@ -203,7 +408,7 @@
 				</div>
 			</section>
 		</div>
-    </div>
+    </div> {% endcomment %}
 </div>
 </body>
 {% endblock %}
